--- a/package.json
+++ b/package.json
@@ -12,9 +12,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^3.0.0",
     "body-parser": "^1.15.2",
-    "express": "^4.14.0",
+    "cheerio": "^1.0.0-rc.2",
+    "dotenv": "^6.0.0",
+    "express": "^4.16.3",
+    "express-handlebars": "^3.0.0",
     "mysql2": "^1.3.6",
+    "request": "^2.88.0",
     "sequelize": "^4.3.1"
   }
 }
